# digital-dashboard

./: README.md  setup.cfg  tox.ini
dashboard/: __main__.py  dash_app.py
dashboard/components/: __init__.py  section_component.py  table_component.py  text_component.py
tests/: test_dashboard.py  test_integration.py
tests/test_configs/: test_merge_config.yaml
