[metadata]
name = digital-dashboard
version = 0.0.1
author = Ryan Singman
author_email = ryanjs@vt.edu
description = Digital Dashboard, for use by Virginia Tech ISE Department
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CNC-lathe/digital-dashboard
project_urls = 
    Issue Tracker = https://github.com/CNC-lathe/digital-dashboard
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    pyzmq >= 22.0.3
    pyyaml >= 5.4.1
    dash = 1.19.0
    lf_utils @ git+https://github.com/CNC-lathe/lf-utils.git

[flake8]
max-line-length = 100
per-file-ignores = __init__.py:F401
